--- a/blog-client/package.json
+++ b/blog-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -38,6 +39,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "qs": "^6.7.0",
     "react": "^16.8.4",
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
@@ -120,5 +122,6 @@
   },
   "devDependencies": {
     "node-sass": "^4.11.0"
-  }
+  },
+  "proxy": "http://localhost:8083"
 }
