--- a/blog-admin/package.json
+++ b/blog-admin/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "antd": "^3.15.2",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -133,5 +134,6 @@
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
     "node-sass": "^4.11.0"
-  }
+  },
+  "proxy": "http://localhost:8083"
 }
